dev: use `Firepuma.DatabaseRepositories.CosmosDb` nuget package
* `Firepuma.DatabaseRepositories.CosmosDb` nuget package, which contains all the repository and Cosmos-repository code
* Explicitly import `Newtonsoft.Json` version (otherwise it is implicitly pulled in via CosmosDb repository)

--- a/Firepuma.Scheduling.FunctionApp/Firepuma.Scheduling.FunctionApp.csproj
+++ b/Firepuma.Scheduling.FunctionApp/Firepuma.Scheduling.FunctionApp.csproj
@@ -5,12 +5,14 @@
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="Cronos" Version="0.7.1" />
+        <PackageReference Include="Firepuma.DatabaseRepositories.CosmosDb" Version="0.1.1" />
         <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.30.1" />
         <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.1.0" />
         <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.ServiceBus" Version="5.7.0" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
         <PackageReference Include="Microsoft.Extensions.Options.DataAnnotations" Version="6.0.0" />
         <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.1.1" />
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     </ItemGroup>
     <ItemGroup>
         <None Update="host.json">
