--- a/Firepuma.Scheduling.FunctionApp/Firepuma.Scheduling.FunctionApp.csproj
+++ b/Firepuma.Scheduling.FunctionApp/Firepuma.Scheduling.FunctionApp.csproj
@@ -5,7 +5,9 @@
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="Cronos" Version="0.7.1" />
+        <PackageReference Include="Firepuma.CommandsAndQueries.CosmosDb" Version="0.1.1" />
         <PackageReference Include="Firepuma.DatabaseRepositories.CosmosDb" Version="0.5.6" />
+        <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
         <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.30.1" />
         <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.1.0" />
         <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.ServiceBus" Version="5.7.0" />
