feat: add latest commands library (with validation and authorization)
* Split out relevant code into Domain and Infrastructure projects
* Improve CosmosContainerConfiguration, to fit new version of Firepuma.CommandsAndQueries library

--- a/.github/workflows/unit-tests-only.yml
+++ b/.github/workflows/unit-tests-only.yml
@@ -22,7 +22,9 @@ jobs:
 
       - name: Install dependencies
         run: |
+          dotnet restore Firepuma.Scheduling.Domain
           dotnet restore Firepuma.Scheduling.FunctionApp
+          dotnet restore Firepuma.Scheduling.Infrastructure
           dotnet restore Firepuma.Scheduling.Tests
 
       - name: Test
