dev: add NLog and docker-compose for local development
* NLog emits logs to UDP and can be viewed in Log4View
* docker-compose can be used to start (with `docker-compose up -d`) to always run the service when docker starts

--- a/Firepuma.Scheduling.Infrastructure/Firepuma.Scheduling.Infrastructure.csproj
+++ b/Firepuma.Scheduling.Infrastructure/Firepuma.Scheduling.Infrastructure.csproj
@@ -12,6 +12,7 @@
       <PackageReference Include="Firepuma.DatabaseRepositories.MongoDb" Version="0.22.1" />
       <PackageReference Include="Google.Cloud.Diagnostics.AspNetCore3" Version="5.1.0" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+      <PackageReference Include="NLog.Web.AspNetCore" Version="5.2.3" />
     </ItemGroup>
 
     <ItemGroup>
