--- a/Firepuma.Scheduling.Worker/appsettings.Development.json
+++ b/Firepuma.Scheduling.Worker/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "MongoDb": {
-    "ConnectionString": "mongodb://localhost",
+    "ConnectionString": "mongodb://host.docker.internal",
     "DatabaseName": "LocalFirepumaScheduling"
   },
 
